updated .gitignore to reflect changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-_site/
-.sass-cache/
+# Jekyll ignores
+_site
+.sass-cache
 .jekyll-metadata
+
+# OSX ignores
 .DS_Store
-codekit-config.json
-node_modules
-Gemfile.lock
+
+
+
