--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Howdy, it's Kunesh
+email: jdkunesh@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  The personal site of Jason Daniel Kunesh. Sometime mustachiod Chicagoan. Hiya!
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://jdkunesh.com" # the base hostname & protocol for your site
+twitter_username: jdkunesh
+github_username:  jdkunesh
 
 # Build settings
 markdown: kramdown
