--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Howdy, it's Kunesh
+title: Zoinks, it's Kunesh
 email: jdkunesh@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   The personal site of Jason Daniel Kunesh. Sometime mustachiod Chicagoan. Hiya!
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jdkunesh.com" # the base hostname & protocol for your site
 twitter_username: jdkunesh
 github_username:  jdkunesh
