--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,10 @@
 # Site settings
 title: Yup, it's Kunesh!
 email: jdkunesh@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Hi. This is my personal web site. Thanks for visiting.
+description: This is my personal web site.
+
+# > # this means to ignore newlines until "baseurl:"
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://jdkunesh.com" # the base hostname & protocol for your site
 twitter_username: jdkunesh
