--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Yup, it's Kunesh!
+title: Kunesh here.
 email: jdkunesh@gmail.com
 description: This is my personal web site.
 
