minor copy tightening

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Kunesh here.
 email: jdkunesh@gmail.com
-description: This is my personal web site.
+description: Thanks for visiting my personal web site.
 
 # > # this means to ignore newlines until "baseurl:"
 
