--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+name: jdkunesh.com
 title: Jason Kunesh
 email: jdkunesh@gmail.com
 description: I make short stories long.
