--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -4,7 +4,7 @@
   url: /chicago
   alt_text:
   cases:
-    - title: 
+    - title: 311
       team: City of Chicago
       budget:
       project_timeframe:
