evolution of navigation and content support

--- a/_data/work.yml
+++ b/_data/work.yml
@@ -1,171 +1,13 @@
 - name: City of Chicago
   tags: 
-  image: 
   url: /work/chicago
-  alt_text:
+  image: /img/work/LOGO-CHICAGO-horizontal.png
+  alt_text: City of Chicago
   cases:
-    - title: 311
-      team: City of Chicago
-      budget:
-      project_timeframe:
-      tags: [] 
-      role:
-      role_timeframe:
-      challenge: 
-        description: >
-                asfdsafdasdfsadfsdafsdfasf
-                asfsadfsadfsdafsdfsdfsadf
-        media:
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-      research:
-      showcase:
-      validation:
-      learnings:
-      results:
-- name: Public Good
-  tags: 
-  image: 
-  url: /publicgood
-  alt_text:
-  cases:
-    - title: 
-      team: Public Good
-      budget:
-      project_timeframe:
-      tags: [] 
-      role:
-      role_timeframe:
-      challenge: 
-        description: >
-                asfdsafdasdfsadfsdafsdfasf
-                asfsadfsadfsdafsdfsdfsadf
-        media:
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-      research:
-      showcase:
-      validation:
-      learnings:
-      results:
-- name: Obama for America
-  tags: 
-  image: 
-  url: /ofa
-  alt_text:
-  cases:
-    - title: 
-      team: Obama for America
-      budget:
-      project_timeframe:
-      tags: [] 
-      role:
-      role_timeframe:
-      challenge: 
-        description: >
-                asfdsafdasdfsadfsdafsdfasf
-                asfsadfsadfsdafsdfsdfsadf
-        media:
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-      research:
-      showcase:
-      validation:
-      learnings:
-      results:
-- name: Fuzzy Math
-  tags: 
-  image: 
-  url: /fuzzymath
-  alt_text:
-  cases:
-    - title: 
-      team: Fuzzy Math
-      budget:
-      project_timeframe:
-      tags: [] 
-      role:
-      role_timeframe:
-      challenge: 
-        description: >
-                asfdsafdasdfsadfsdafsdfasf
-                asfsadfsadfsdafsdfsdfsadf
-        media:
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-      research:
-      showcase:
-      validation:
-      learnings:
-      results:
-- name: Orbitz
-  tags: 
-  image: 
-  url: /orbitz
-  alt_text:
-  cases:
-    - title: 
-      team: Orbitz
-      budget:
-      project_timeframe:
-      tags: [] 
-      role:
-      role_timeframe:
-      challenge: 
-        description: >
-                asfdsafdasdfsadfsdafsdfasf
-                asfsadfsadfsdafsdfsdfsadf
-        media:
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-          - url: 
-            type: 
-            alt_text: 
-      research:
-      showcase:
-      validation:
-      learnings:
-      results:
-- name: Everything else
-  tags: 
-  image: 
-  url: /etc
-  alt_text:
-  cases:
-    - title: 
-      team: Everything else
+    - title: 311 Modernization
+      url: /work/311
+      image: 
+      alt_text:
       budget:
       project_timeframe:
       tags: [] 
