--- a/_data/work.yml
+++ b/_data/work.yml
@@ -11,7 +11,7 @@
       alt_text:
       budget:
       project_timeframe:
-      tags:  
+      tags: {community, turds}
       role: Design Director
       role_timeframe: January 2018 to now
       challenge: 
