--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,13 @@
 primary:
   - text: Work
     url: /work
+
+footer:
+  - text: Chicago, IL
+    url: 
+  - text: Github
+    url: https://github.com/jdkunesh
+  - text: Twitter
+    url: http://www.twitter.com/jdkunesh/
+  - text: LinkedIn
+    url: http://www.linkedin.com/in/jdkunesh/
