sideways navigation for eras

--- a/_data/work.yml
+++ b/_data/work.yml
@@ -176,11 +176,18 @@
     * Raised $$$
     * Millions fundraised.
     * Billions of minds changes through our Public Good for Media program.
+    * Did lots of advisory activities from future of work to future of design.
 - title: Obama for America
   image: /img/work/Obama_logomark2012.png
   url: /work/ofa
   alt_text:
-  description: At the design office
+  description: |
+    I joined Obama for America to be the first Director of User Experience on a Presidential campaign. It was an incredible prilivege, and one of the most difficult jobs I've ever done.
+    * Dashboard volunteer platform program management.
+    * GOTV program management and overall management of the product team.
+    * 11% conversion increase resulted in an additional $30mm raised.
+    * Mobile app product management
+    * Created nationwide volunteer UX network and supported and opened the SF tech field office.
 - title: Fuzzy Math
   image: /img/work/FM_SoMe_Square.png
   url: /work/fm
