--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,21 @@
 primary:
+  - text: About
+    url: /about
   - text: Work
     url: /work
 
+
 footer:
+  - text: Accessibility
+    url: /accessibility
+  - text: Colophon
+    url: /colophon
   - text: LinkedIn
     url: http://www.linkedin.com/in/jdkunesh/
+    external: true
   - text: Twitter
     url: http://www.twitter.com/jdkunesh/
+    external: true
   - text: Github
     url: https://github.com/jdkunesh
+    external: true
