--- a/_data/work.yml
+++ b/_data/work.yml
@@ -7,7 +7,7 @@
   cases: 
     - title: 311 Modernization
       url: /work/311
-      image: /img/work/LOGO-CHICAGO-horizontal 311.png
+      image: /img/work/chi/CHI-311-logo.png
       alt_text: CHI 311 Logo
       team: City of Chicago
       budget: $34mm
